Proper labelling in analytics about bins being analysed

--- a/BinWatch/BinWatch/Base.lproj/Main.storyboard
+++ b/BinWatch/BinWatch/Base.lproj/Main.storyboard
@@ -386,84 +386,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tER-an-mg9">
-                                <rect key="frame" x="0.0" y="132" width="600" height="50"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bin 2" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D92-P8-FNU">
-                                        <rect key="frame" x="17" y="17" width="39.5" height="15"/>
-                                        <animations/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100%" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jIH-Fu-dRK">
-                                        <rect key="frame" x="534" y="17" width="46" height="15"/>
-                                        <animations/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <animations/>
-                                <color key="backgroundColor" red="1" green="0.96943304109999995" blue="0.71732925299999994" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstItem="D92-P8-FNU" firstAttribute="leading" secondItem="tER-an-mg9" secondAttribute="leading" constant="17" id="9pT-qX-wAo"/>
-                                    <constraint firstAttribute="bottom" secondItem="jIH-Fu-dRK" secondAttribute="bottom" constant="18" id="B3s-zN-KZP"/>
-                                    <constraint firstItem="D92-P8-FNU" firstAttribute="leading" secondItem="tER-an-mg9" secondAttribute="leading" constant="20" id="EFR-oT-LAW"/>
-                                    <constraint firstItem="D92-P8-FNU" firstAttribute="top" secondItem="tER-an-mg9" secondAttribute="top" constant="17" id="SH8-oL-grf"/>
-                                    <constraint firstAttribute="trailing" secondItem="jIH-Fu-dRK" secondAttribute="trailing" constant="20" id="Usc-cH-KJu"/>
-                                    <constraint firstItem="jIH-Fu-dRK" firstAttribute="top" secondItem="tER-an-mg9" secondAttribute="top" constant="17" id="VAE-MI-xby"/>
-                                    <constraint firstItem="jIH-Fu-dRK" firstAttribute="top" secondItem="tER-an-mg9" secondAttribute="top" constant="17" id="bAO-dm-dDS"/>
-                                    <constraint firstAttribute="bottom" secondItem="D92-P8-FNU" secondAttribute="bottom" constant="18" id="fdJ-72-yqd"/>
-                                    <constraint firstAttribute="bottom" secondItem="jIH-Fu-dRK" secondAttribute="bottom" constant="18" id="mgl-ox-Uio"/>
-                                    <constraint firstAttribute="height" constant="50" id="nT1-8c-Wta"/>
-                                    <constraint firstAttribute="bottom" secondItem="D92-P8-FNU" secondAttribute="bottom" constant="18" id="oiC-mU-8rX"/>
-                                    <constraint firstAttribute="trailing" secondItem="jIH-Fu-dRK" secondAttribute="trailing" constant="20" id="xX9-tr-Gbb"/>
-                                    <constraint firstItem="D92-P8-FNU" firstAttribute="top" secondItem="tER-an-mg9" secondAttribute="top" constant="17" id="yGc-eb-7X0"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="EFR-oT-LAW"/>
-                                        <exclude reference="oiC-mU-8rX"/>
-                                        <exclude reference="yGc-eb-7X0"/>
-                                        <exclude reference="B3s-zN-KZP"/>
-                                        <exclude reference="Usc-cH-KJu"/>
-                                        <exclude reference="bAO-dm-dDS"/>
-                                    </mask>
-                                </variation>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w1H-Te-GLK">
-                                <rect key="frame" x="0.0" y="72" width="600" height="50"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bin 1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mgf-61-ugD">
-                                        <rect key="frame" x="20" y="17" width="39.5" height="15"/>
-                                        <animations/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100%" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wvJ-jR-U2K">
-                                        <rect key="frame" x="534" y="17" width="46" height="15"/>
-                                        <animations/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <animations/>
-                                <color key="backgroundColor" red="1" green="0.96943304109999995" blue="0.71732925299999994" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="8Zi-hF-xQC"/>
-                                    <constraint firstItem="mgf-61-ugD" firstAttribute="leading" secondItem="w1H-Te-GLK" secondAttribute="leading" constant="20" id="Dko-HH-RSH"/>
-                                    <constraint firstItem="mgf-61-ugD" firstAttribute="top" secondItem="w1H-Te-GLK" secondAttribute="top" constant="17" id="HTz-o5-VnU"/>
-                                    <constraint firstItem="wvJ-jR-U2K" firstAttribute="top" secondItem="w1H-Te-GLK" secondAttribute="top" constant="17" id="IIq-PV-Pmp"/>
-                                    <constraint firstAttribute="bottom" secondItem="wvJ-jR-U2K" secondAttribute="bottom" constant="18" id="TsE-HO-iDQ"/>
-                                    <constraint firstAttribute="bottom" secondItem="mgf-61-ugD" secondAttribute="bottom" constant="18" id="adb-gS-aM3"/>
-                                    <constraint firstAttribute="trailing" secondItem="wvJ-jR-U2K" secondAttribute="trailing" constant="20" id="m73-oD-i0Z"/>
-                                </constraints>
-                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="by1-WB-oJK">
-                                <rect key="frame" x="0.0" y="192" width="600" height="25"/>
+                                <rect key="frame" x="0.0" y="142" width="600" height="25"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="wIQ-uE-zV5"/>
@@ -473,7 +397,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8YX-7J-kme">
-                                <rect key="frame" x="0.0" y="233" width="600" height="21"/>
+                                <rect key="frame" x="0.0" y="172" width="600" height="21"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="WI9-2m-v1E"/>
@@ -483,32 +407,39 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="znW-PK-ix6" customClass="CPTGraphHostingView">
-                                <rect key="frame" x="0.0" y="284" width="600" height="267"/>
+                                <rect key="frame" x="0.0" y="203" width="600" height="348"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gg7-3r-qfv">
+                                <rect key="frame" x="0.0" y="72" width="600" height="65"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="cyx-J5-hiM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="gg7-3r-qfv" firstAttribute="top" secondItem="VXX-qP-G0y" secondAttribute="bottom" constant="8" id="03t-AZ-8ec"/>
                             <constraint firstItem="8YX-7J-kme" firstAttribute="leading" secondItem="goP-Ks-BCN" secondAttribute="leading" id="08M-Zo-pzn"/>
-                            <constraint firstItem="znW-PK-ix6" firstAttribute="top" secondItem="8YX-7J-kme" secondAttribute="bottom" constant="30" id="6dm-um-Nse"/>
-                            <constraint firstItem="tER-an-mg9" firstAttribute="leading" secondItem="goP-Ks-BCN" secondAttribute="leading" id="BH2-un-tbJ"/>
-                            <constraint firstItem="w1H-Te-GLK" firstAttribute="leading" secondItem="goP-Ks-BCN" secondAttribute="leading" id="HTc-fM-XzC"/>
+                            <constraint firstItem="znW-PK-ix6" firstAttribute="top" secondItem="8YX-7J-kme" secondAttribute="bottom" constant="10" id="6dm-um-Nse"/>
                             <constraint firstItem="by1-WB-oJK" firstAttribute="leading" secondItem="goP-Ks-BCN" secondAttribute="leading" id="Mex-RN-AcH"/>
                             <constraint firstAttribute="trailing" secondItem="by1-WB-oJK" secondAttribute="trailing" id="Mf4-vb-KLi"/>
                             <constraint firstAttribute="trailing" secondItem="8YX-7J-kme" secondAttribute="trailing" id="Nfm-I6-HvB"/>
-                            <constraint firstItem="w1H-Te-GLK" firstAttribute="top" secondItem="VXX-qP-G0y" secondAttribute="bottom" constant="8" id="Ove-SJ-Cfw"/>
-                            <constraint firstAttribute="trailing" secondItem="w1H-Te-GLK" secondAttribute="trailing" id="SHx-jj-2Nh"/>
-                            <constraint firstItem="tER-an-mg9" firstAttribute="top" secondItem="w1H-Te-GLK" secondAttribute="bottom" constant="10" id="T6M-Nd-4gz"/>
-                            <constraint firstItem="by1-WB-oJK" firstAttribute="top" secondItem="tER-an-mg9" secondAttribute="bottom" constant="10" id="Yp0-ky-HeM"/>
-                            <constraint firstAttribute="trailing" secondItem="tER-an-mg9" secondAttribute="trailing" id="b9X-Qw-CiV"/>
                             <constraint firstAttribute="trailing" secondItem="znW-PK-ix6" secondAttribute="trailing" id="dfj-2y-k8e"/>
-                            <constraint firstItem="8YX-7J-kme" firstAttribute="top" secondItem="by1-WB-oJK" secondAttribute="bottom" constant="16" id="sdU-Bn-kKy"/>
+                            <constraint firstItem="gg7-3r-qfv" firstAttribute="leading" secondItem="goP-Ks-BCN" secondAttribute="leading" id="hkB-C2-5Ju"/>
+                            <constraint firstItem="by1-WB-oJK" firstAttribute="top" secondItem="gg7-3r-qfv" secondAttribute="bottom" constant="5" id="pYq-9C-1oJ"/>
+                            <constraint firstItem="8YX-7J-kme" firstAttribute="top" secondItem="by1-WB-oJK" secondAttribute="bottom" constant="5" id="sdU-Bn-kKy"/>
                             <constraint firstItem="0Hc-69-qcR" firstAttribute="top" secondItem="znW-PK-ix6" secondAttribute="bottom" id="t9S-5d-vwE"/>
                             <constraint firstItem="znW-PK-ix6" firstAttribute="leading" secondItem="goP-Ks-BCN" secondAttribute="leading" id="wAg-rz-iln"/>
+                            <constraint firstAttribute="trailing" secondItem="gg7-3r-qfv" secondAttribute="trailing" id="zUt-fX-kDU"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="binDetailsTextView" destination="gg7-3r-qfv" id="M0B-w2-Y7d"/>
                         <outlet property="dateRangeLabel" destination="by1-WB-oJK" id="QAi-Em-yqV"/>
                         <outlet property="graphView" destination="znW-PK-ix6" id="TEf-WR-00G"/>
                         <outlet property="queryLabel" destination="8YX-7J-kme" id="Qo5-LV-R6W"/>
